--- a/modules/689/pages/doc-d1.adoc
+++ b/modules/689/pages/doc-d1.adoc
@@ -45,7 +45,7 @@ NOTE: *distraint* in the text below means the legal seizure of property to compe
 |
 [literal,subs="verbatim,quotes"]
 ....
-                                      11
+                             corner folio:11
 
 
 
