--- a/modules/689/pages/overview.adoc
+++ b/modules/689/pages/overview.adoc
@@ -24,3 +24,20 @@ Through it all, execution was *temporarily stayed* while the Chamber considered 
 forced sale remained very real. That’s the moment we’re seeing: a tenant farmer, squeezed between a court judgment
 and a cautious treasury, trying every formal avenue to keep his farm.
 
+
+.What “holding” means here
+****
+The case file documents mention the *Stelle/Stätte (No. 10, Berenbusch)*, which was a *leasehold farm unit*: the
+plot and farm buildings, with the right to use the land. The land itself belonged to the princely domain; the Colon
+(from colonus) held a long-term, usually inheritable lease with duties attached.
+
+In this system a Colon (tenant farmer) held a long-term, inheritable lease to a numbered farm (Stelle/Stätte). The
+soil belonged to the princely domain, but the buildings and improvements were the tenant’s property (or at least
+under his proprietary control). 
+
+*"holding"* is the translation chosen for *Stelle/Stätte*.  *In practice:*  
+* the *"holding"* could be pledged as *security (collateral)* for a loan.  
+* On default, authorities could *auction the lease right and buildings* to satisfy the judgment.  
+****
+
+
