--- a/modules/689/pages/overview.adoc
+++ b/modules/689/pages/overview.adoc
@@ -12,17 +12,17 @@
 
 In the 1830s a leather debt from Johann Heinrich Krückeberg’s parents’ shoemaking trade rolled forward onto him.
 The creditor, Hempel & Söhne of Minden, sued; by *29 May / 6 June 1840* the Amt Bückeburg (acting as a court) had
-ordered payment, with *5% interest back to 9 Apr 1833*. When he still couldn’t pay, the court moved to
-enforcement: on *10/13 Jul 1841* it ordered execution and warned that *distraint* and a *sale of his holding
-(Stelle/Stätte No. 10, Berenbusch)* would follow if payment failed. Under that pressure, Krückeberg turned to the
-*Rentkammer* for relief: first on *2 Oct 1841*, then again *11/12 Nov 1841*, asking to borrow from the
-Chamber treasury and/or pay in installments. The Amt’s report of *7 Oct 1841* confirmed the judgment and said
-there was *no legal basis* to force installments; it proposed instead a Chamber loan of *190 rt*, using the
-holding as security. A valuation on *15 Nov 1841* set the holding at *1,525 rt*, less *700 rt* debts (= *825
-rt* remaining), and the reviewer *could not recommend* the loan; the Chamber board noted *“to be rejected.”*
-Through it all, execution was *temporarily stayed* while the Chamber considered the request, but the threat of a
-forced sale remained very real. That’s the moment we’re seeing: a tenant farmer, squeezed between a court judgment
-and a cautious treasury, trying every formal avenue to keep his farm.
+ordered payment, with *5% interest back to 9 Apr 1833*. When he still couldn’t pay, the court moved to enforcement:
+on *10/13 Jul 1841* it ordered execution and warned that *distraint* and a *sale of his holding (Stelle/Stätte No.
+10, Berenbusch)* would follow if payment failed. Under that pressure, Krückeberg turned to the *Rentkammer* for
+relief: first on *2 Oct 1841*, then again *11/12 Nov 1841*, asking to borrow from the Chamber treasury and/or pay
+in installments. The Amt’s report of *7 Oct 1841* confirmed the judgment and said there was *no legal basis* to
+force installments; it proposed instead a Chamber loan of *190 Reichsthaler (rt)*, using the holding as security. A
+valuation on *15 Nov 1841* set the holding at *1,525 rt*, less *700 rt* debts (= *825 rt* remaining), and the
+reviewer *could not recommend* the loan; the Chamber board noted *“to be rejected.”* Through it all, execution was
+*temporarily stayed* while the Chamber considered the request, but the threat of a forced sale remained very real.
+That’s the moment we’re seeing: a tenant farmer, squeezed between a court judgment and a cautious treasury, trying
+every formal avenue to keep his farm.
 
 
 .What “holding” means here
