--- a/modules/689/pages/overview.adoc
+++ b/modules/689/pages/overview.adoc
@@ -33,9 +33,9 @@ every formal avenue to keep his farm.
 the plot and farm buildings, with the right to use the land. The land itself belonged to the princely domain; the
 Colon (from colonus) held a long-term, usually inheritable lease with duties attached.
 
-In this system a Colon (tenant farmer) held a long-term, inheritable lease to a numbered farm (Stelle/Stätte). The
-soil belonged to the princely domain, but the buildings and improvements were the tenant’s property (or at least
-under his proprietary control). 
+In this system were a Colon (tenant farmer) held a long-term, inheritable lease to a numbered farm (Stelle/Stätte).
+The soil belonged to the princely domain, but the buildings and improvements were the tenant’s property (or at
+least under his proprietary control). 
 
 *In practice*:
 
