--- a/modules/689/pages/overview.adoc
+++ b/modules/689/pages/overview.adoc
@@ -29,9 +29,9 @@ every formal avenue to keep his farm.
 ****
 [TIP]
 ====
-*"holding"* is the translation chosen for *Stelle/Stätte (No. 10, Berenbusch)*, which was a *leasehold farm unit*:
+*"holding"* is the translation chosen for *Stelle/Stätte (No. 10, Berenbusch)*, the *leasehold farm unit*:
 the plot and farm buildings, with the right to use the land. The land itself belonged to the princely domain; the
-Colon (from colonus) held a long-term, usually inheritable lease with duties attached.
+Colon held a long-term, usually inheritable lease with duties attached.
 
 In this system where a Colon (tenant farmer) held a long-term, inheritable lease to a numbered farm (Stelle/Stätte),
 the soil belonged to the princely domain, but the buildings and improvements were the tenant’s property (or at
