--- a/modules/689/pages/overview.adoc
+++ b/modules/689/pages/overview.adoc
@@ -9,21 +9,41 @@
 // Be sure also to:
 // * Summarize and mention that the debt owed to Hempel and Sons originated with Jobst Heinrich (1765-1822) and give
 // a brief biography of him and his wife.
-
-In the 1830s a leather debt from Johann Heinrich Krückeberg’s parents’ shoemaking trade rolled forward onto him.
-The creditor, Hempel & Söhne of Minden, sued; by *29 May / 6 June 1840* the Amt Bückeburg (acting as a court) had
-ordered payment, with *5% interest back to 9 Apr 1833*. When he still couldn’t pay, the court moved to enforcement:
-on *10/13 Jul 1841* it ordered execution and warned that *distraint* and a *sale of his holding (Stelle/Stätte No.
-10, Berenbusch)* would follow if payment failed. Under that pressure, Krückeberg turned to the *Rentkammer* for
-relief: first on *2 Oct 1841*, then again *11/12 Nov 1841*, asking to borrow from the Chamber treasury and/or pay
-in installments. The Amt’s report of *7 Oct 1841* confirmed the judgment and said there was *no legal basis* to
-force installments; it proposed instead a Chamber loan of *190 Reichsthaler (rt)*, using the holding as security. A
-valuation on *15 Nov 1841* set the holding at *1,525 rt*, less *700 rt* debts (= *825 rt* remaining), and the
-reviewer *could not recommend* the loan; the Chamber board noted *“to be rejected.”* Through it all, execution was
-*temporarily stayed* while the Chamber considered the request, but the threat of a forced sale remained very real.
-That’s the moment we’re seeing: a tenant farmer, squeezed between a court judgment and a cautious treasury, trying
-every formal avenue to keep his farm.
-
+In the 1830s a leather debt from his parents’ shoemaking trade rolled forward onto Johann Heinrich Krückeberg; by
+**29 May** and **6 June 1840** the Amt Bückeburg, acting as a court, had ordered payment with **5% interest from 9
+April 1833**.footnote:[fn-amt-decree, See the judicial *Decretum* trail cited in the July order: attorney Meyer
+recalls the decrees of **29 May** and **6 June 1840** and the interest base (**5% since 9 Apr 1833**). The Amt then
+issues its own execution order on **13 Jul 1841**. xref:amt-decree.adoc[Amt Bückeburg — Decree & Execution Order
+(10/13 Jul 1841)].] When he still could not pay, the Amt on **10/13 July 1841** ordered execution, instructed the
+bailiff Möller to levy, and warned that distraint and sale would follow if no payment came within fourteen
+days.footnote:[fn-execution, The **10 Jul 1841** motion and **13 Jul 1841 Decretum** direct the Amtsdiener
+**Möller** to execute for **133 rt 7 mg** plus **5% since 9 Apr 1833**, with a 14-day warning of **Auspfändung**
+(distraint) and sale. xref:amt-decree.adoc[Amt Bückeburg — Decree & Execution Order (10/13 Jul 1841)].] Under that
+pressure Krückeberg turned to the Rentkammer, petitioning on **2 October 1841** (and again on **11/12 November
+1841**) for relief.footnote:[fn-petitions, First petition: **2 Oct 1841** (requests consent to a new loan and
+installment terms), xref:doc-01.adoc[Document 1 — Petition (2 Oct 1841)]; second petition: drafted **11 Nov**,
+presented **12 Nov 1841** (asks for a **200 rt** Chamber loan), xref:doc-03.adoc[Document 3 — Petition (11/12 Nov
+1841)].] Meanwhile the **Amt’s report of 7 October 1841** to the Chamber confirmed the judgment (133 rt 7 mg, 5%
+since 1833), noted the long litigation (pending since **30 July 1836**, twice *in appellatorio*, once
+*supplicatorio*), stated there was no legal basis to impose installments and that the creditor would not accept
+them, and recorded that execution was **temporarily stayed** while the Chamber considered the
+case.footnote:[fn-amt-report, **Amt Bückeburg to Rentkammer, 7 Oct 1841**: confirms amount/interest, recounts the
+appellate history since **30 Jul 1836**, rejects court-ordered installments, notes creditor’s refusal, and says
+execution is *einstweilen sistirt* (temporarily stayed). xref:doc-02.adoc[Document 2 — Amt report (7 Oct 1841)].]
+If relief was to be granted at all, the Amt proposed a **190 rt** Chamber loan **secured on his leasehold farmstead
+(Stelle/Stätte No. 10)**, noting **10 Morgen 30 Ruthen** of land, buildings insured at **525 rt**, and existing
+encumbrances of **700 rt**.footnote:[fn-security, Loan proposal and collateral details appear in **Doc 2 (7 Oct
+1841)**: **190 rt** loan; holding size **10 Morgen 30 Ruthen**; **Hofsgebäude** insured at **525 rt**; **700 rt**
+in encumbrances already on the holding. xref:doc-02.adoc[Document 2 — Amt report (7 Oct 1841)].] A **15 November
+1841** valuation memo reckoned land and buildings at **1,525 rt**, left **825 rt** after debts, and the reviewing
+official declined to recommend the loan; the Chamber board noted **to be rejected**.footnote:[fn-valuation,
+**Valuation & votum, 15 Nov 1841**: table totals **1,525 rt** (land **1,000** + buildings **525**), less **700** =
+**825 rt** remaining; the reviewer writes he cannot **befürworten** the loan; the K.C. docket marks
+**abzuschlagen**. xref:valuation-1841-11-15.adoc[Valuation & Opinion (15 Nov 1841)].] Through all of this, the risk
+of a **forced sale of the farmstead** remained real—indeed, Krückeberg himself reports that the **Amt threatened to
+sell his holding** if he failed to raise the money.footnote:[fn-threat, Krückeberg’s second petition (presented
+**12 Nov 1841**) says plainly: “das Amt drohet mit dem Verkaufe meiner Stätte.” xref:doc-03.adoc[Document 3 —
+Petition (11/12 Nov 1841)].]
 
 .What “holding” means here
 ****
