--- a/modules/689/pages/new-overview.adoc
+++ b/modules/689/pages/new-overview.adoc
@@ -1,3 +1,5 @@
+= Overview
+
 In the 1830s a leather debt from Johann Heinrich Krückeberg’s parents’ shoemaking trade rolled forward onto him.
 The creditor, Hempel & Söhne of Minden, sued; 
 
