--- a/modules/689/nav.adoc
+++ b/modules/689/nav.adoc
@@ -10,4 +10,4 @@
 * xref:doc-02-copt.adoc[]
 * xref:doc-02-cover-slip.adoc[]
 * xref:doc-03.adoc[]
-* xref:doc-03-a.adoc[]
+* xref:stelle-valuation.adoc[]
