--- a/modules/689/pages/overview.adoc
+++ b/modules/689/pages/overview.adoc
@@ -4,7 +4,7 @@
 :fn-petitions: footnote:fn-petitions[Krückeberg’s petitions to the Chamber: 2 Oct 1841 (first petition), xref:doc-01.adoc[Document 1 — Petition (2 Oct 1841)]; and 11/12 Nov 1841 (second petition asking for a 200 rt Chamber loan), xref:doc-03.adoc[Document 3 — Petition (11/12 Nov 1841)].]
 :fn-amt-report: footnote:fn-amt-report[Amt report to the Rentkammer, 7 Oct 1841: confirms 133 rt 7 mg, 5% since 1833; notes the case pending since 30 Jul 1836 (twice _in appellatorio_, once _supplicatorio_); rejects court-ordered installments and records the creditor’s refusal; and notes execution is temporarily stayed. See xref:doc-02.adoc[Document 2 — Amt report (7 Oct 1841)].]
 :fn-security: footnote:fn-security[The same 7 Oct 1841 report proposes, if relief is granted, a 190 rt Chamber loan secured on Stelle/Stätte No. 10 (size 10 Morgen 30 Ruthen), with buildings insured at 525 rt and 700 rt in existing encumbrances. See xref:doc-02.adoc[Document 2 — Amt report (7 Oct 1841)].]
-:fn-valuation: footnote:fn-valuation[15 Nov 1841 valuation & opinion: total 1,525 rt (land 1,000 + buildings 525), less 700 = 825 rt; the reviewer declines to recommend (_befürworten_) the 200 rt loan; K.C. docket: abzuschlagen. See xref:valuation-1841-11-15.adoc[Valuation & Opinion (15 Nov 1841)].]
+:fn-valuation: footnote:fn-valuation[15 Nov 1841 valuation & opinion: total 1,525 rt (land 1,000 + buildings 525), less 700 = 825 rt; the reviewer declines to recommend (_befürworten_) the 200 rt loan; K.C. docket: abzuschlagen. See xref:stelle-valuation.adoc[Valuation & Opinion (15 Nov 1841)].]
 :fn-threat: footnote:fn-threat[From Krückeberg’s second petition, presented 12 Nov 1841: the Amt threatens to sell his holding if the money is not produced. See xref:doc-03.adoc[Document 3 — Petition (11/12 Nov 1841)].]
 
 In the 1830s a leather debt from his parents’ shoemaking trade rolled forward onto Johann Heinrich Krückeberg; by
