--- a/modules/689/pages/overview.adoc
+++ b/modules/689/pages/overview.adoc
@@ -7,17 +7,15 @@
 :fn-valuation: footnote:fn-valuation[15 Nov 1841 valuation & opinion: total 1,525 rt (land 1,000 + buildings 525), less 700 = 825 rt; the reviewer declines to recommend (_befürworten_) the 200 rt loan; K.C. docket: abzuschlagen. See xref:stelle-valuation.adoc[Valuation & Opinion (15 Nov 1841)].]
 :fn-threat: footnote:fn-threat[From Krückeberg’s second petition, presented 12 Nov 1841: the Amt threatens to sell his holding if the money is not produced. See xref:doc-03.adoc[Document 3 — Petition (11/12 Nov 1841)].]
 
-In the 1830s, Johann Heinrich Krückeberg's inherited his parent's leather debt from his father's shoemaking trade
+In the 1830s, Johann Heinrich Krückeberg's inherited his parent's debt from his father's shoemaking trade.
 On *May 29, 1840* and again on *June 6, 1840*, the Amt Bückeburg, the local governmental office in Bückeburg,
 acting in its dual capacity as a court, ordered payment of *133 Reichsthaler 7 Mariengroschen, plus 5% interest
 from 9 April 1833*{fn-amt-decree}. 
-
 
 [NOTE]
 ====
 A Reichsthaler (rt) was equivalent to 24 Mariengroschen (mg) 
 ====
-
 
 When he still could not pay, the Amt on *July 13, 1841* ordered the bailiff Möller to collect, and warned if no
 payment came within fourteen days{fn-execution}, that distraint (the seizure of his assets) and sale would follow.
@@ -31,6 +29,9 @@ The **Rentcammer** in Schaumburg-Lippe in 1841 was:
 
 As the higher financial authority of the state, the Rentcammer had the power to review the Amt’s decree and decide
 whether to grant Johann Heinrich relief—such as a loan—or to let the order stand.  
+
+When a father died with debts, they did not vanish. As heir and head of household, Johann Heinrich inherited the
+obligation — and now, as a Colon with land use, he finally had something the Amt could enforce against. 
 
 Meanwhile the *Amt’s report of 7 October 1841* to the Chamber confirmed the
 judgment (133 rt 7 mg, 5% since 1833), noted the long litigation (pending since *30 July 1836*, twice _in
