--- a/modules/689/pages/copt-15-nov-1841.adoc
+++ b/modules/689/pages/copt-15-nov-1841.adoc
@@ -11,7 +11,7 @@ St. 3gl.                              N. C. 5038.
 
 
 
-Copt.                               
+      Copt                               
 an den Colon Krücke-                Das Gesuch des p Krücke-
 berg N. 10.                         berg vom 11. d. M., um
      in Bernebusch                  ein Darlehn von 200 rt
