--- a/modules/689/pages/copt-15-nov-1841.adoc
+++ b/modules/689/pages/copt-15-nov-1841.adoc
@@ -14,7 +14,7 @@ St. 3gl.                              N. C. 5038.
       Copt                               
 an den Colon Krücke-                Das Gesuch des p Krücke-
 berg N. 10.                         berg vom 11. d. M., um
-     in Bernebusch                  ein Darlehn von 200 rt
+     in Berenbusch                  ein Darlehn von 200 rt
                                     aus der Kammerkasse
                                     findet keine Statt.
                                     Bbg. 15 Nov. 1841.
