--- a/modules/689/pages/copt-15-nov-1841.adoc
+++ b/modules/689/pages/copt-15-nov-1841.adoc
@@ -28,7 +28,7 @@ Holste
 
                                      An
                                      Fürstliche Rentkammer.
-                                     Des Colonn Krückeberg
+                                     Des Colon Krückeberg
                                      No 10 in Berenbusch
                                      unterthänigstes Gesuch
                                      um Bewilligung
