--- a/modules/689/pages/copt-15-nov-1841.adoc
+++ b/modules/689/pages/copt-15-nov-1841.adoc
@@ -21,7 +21,7 @@ berg N. 10.                         berg vom 11. d. M., um
 
 Fr.                                
 R.                                   F.p.
-ppedienst                            Lm        L
+Expedirt                             Lm        L
 Holste                
 17/11.                  
              
