--- a/modules/689/pages/stelle-valuation.adoc
+++ b/modules/689/pages/stelle-valuation.adoc
@@ -11,8 +11,10 @@ deducting debts, he calculated a net worth of 825 Reichsthaler, but judged it do
 loan would be secure. Although acknowledging loans had been made in worse cases, he recommended against approval,
 and the Gesuch was marked to be refused.
 
-A same-day note from the Chamber board adds, tersely, that the petition should be rejected. In short: the numbers
-didn’t convince the authorities that a rescue loan was secure, and the risk of a forced sale stayed very real.
+The same-day note at the bottom, written in a different hand and introduced with the abbreviation "KC." for Kammer
+Collegium, shows that the Rentcammer’s board itself acted on the clerk’s opinion and formally resolved: “the
+petition is to be rejected.” In short: the numbers didn’t convince the authorities that a rescue loan was secure,
+and the risk of a forced sale remaimed imminent.
 
 == Transliteration and Translation
 
