--- a/modules/689/pages/stelle-valuation.adoc
+++ b/modules/689/pages/stelle-valuation.adoc
@@ -6,10 +6,11 @@ image::09-r.png[scale=75,link=self]
 [role="section-narrow"]
 == Overview
 
-On 15 November 1841, a Rentcammer clerk prepared a formal valuation of Krückeberg’s farmstead and buildings. After
-deducting debts, he calculated a net worth of 825 Reichsthaler, but judged it doubtful whether a further 200 rt
-loan would be secure. Although acknowledging loans had been made in worse cases, he recommended against approval,
-and the Gesuch was marked to be refused.
+On 15 November 1841, a Rentcammer clerk named Reitz (or Ricke) prepared a formal valuation of Krückeberg’s
+farmstead and buildings. After deducting debts, he calculated a net worth of 825 Reichsthaler, but judged it
+doubtful whether a further 200 rt loan would be secure. Although acknowledging loans had been made in worse cases,
+he recommended against approval, and the Gesuch (the petition for a loan by Johann Heinrich Krückeberg was marked
+to be refused.
 
 The same-day note at the bottom, written in a different hand and introduced with the abbreviation "KC." for Kammer
 Collegium, shows that the Rentcammer’s board itself acted on the clerk’s opinion and formally resolved: “the
