--- a/modules/689/pages/copt-15-nov-1841.adoc
+++ b/modules/689/pages/copt-15-nov-1841.adoc
@@ -1,9 +1,16 @@
-= Needs title
+= Document 3 Cover Slip
 :page-role: wide
 
 image::10-l.png[link=self]
 
+== Transliteration and Translation
 
+
+[cols="1a,1a"]
+|===
+|Transliteration|Translation
+
+|
 [literal,subs="verbatim,quotes"]
 ....
 St. 3gl.                              N. C. 5038.
@@ -11,9 +18,9 @@ St. 3gl.                              N. C. 5038.
 
 
 
-      Copt                               
+      Cop[ia]t                               
 an den Colon Krücke-                Das Gesuch des p Krücke-
-berg N. 10.                         berg vom 11. d. M., um
+berg N. 10                         berg vom 11. d. M., um
      in Berenbusch                  ein Darlehn von 200 rt
                                     aus der Kammerkasse
                                     findet keine Statt.
@@ -35,3 +42,39 @@ Holste
                                      eines Darlehns aus
                                      Kammerkasse.
 ....
+
+
+|
+[literal,subs="verbatim,quotes"]
+....
+St. 3gl.                              N. C. 5038.
+
+
+
+
+Copy to Colon Krückeberg N. 10 in Berenbusch
+
+The petition of Krückeberg, dated the 11th of this month,
+for a loan of 200 Reichsthaler from the chamber treasury
+is denied.
+
+                                    Bbg. 15 Nov. 1841.
+
+Fr.                                
+R.                                   F.p.
+Expedirt                             Lm        L
+Holste                
+17/11.                  
+             
+
+                                     An
+                                     Fürstliche Rentkammer.
+                                     Des Colon Krückeberg
+                                     No 10 in Berenbusch
+                                     unterthänigstes Gesuch
+                                     um Bewilligung
+                                     eines Darlehns aus
+                                     Kammerkasse.
+....
+|===
+
