--- a/modules/689/pages/copt-15-nov-1841.adoc
+++ b/modules/689/pages/copt-15-nov-1841.adoc
@@ -5,7 +5,6 @@ image::10-l.png[link=self]
 
 == Transliteration and Translation
 
-
 [cols="1a,1a"]
 |===
 |Transliteration|Translation
@@ -20,7 +19,7 @@ St. 3gl.                              N. C. 5038.
 
       Cop[ia]t                               
 an den Colon Krücke-                Das Gesuch des p Krücke-
-berg N. 10                         berg vom 11. d. M., um
+berg N. 10                          berg vom 11. d. M., um
      in Berenbusch                  ein Darlehn von 200 rt
                                     aus der Kammerkasse
                                     findet keine Statt.
@@ -32,7 +31,9 @@ Expedirt                             Lm        L
 Holste                
 17/11.                  
              
-
+[Note: The text belowserved as a filing heading that identifies
+ the petition for the Rentkammer’s records. It does not form part
+ of the decision itself.]
                                      An
                                      Fürstliche Rentkammer.
                                      Des Colon Krückeberg
@@ -45,11 +46,10 @@ Holste
 
 
 |
-[literal,subs="verbatim,quotes"]
-....
-St. 3gl.                              N. C. 5038.
-
-
+[verse]
+____
+Stamped 3 Groschen. 
+N. C. 5038.
 
 
 Copy to Colon Krückeberg N. 10 in Berenbusch
@@ -57,24 +57,21 @@ Copy to Colon Krückeberg N. 10 in Berenbusch
 The petition of Krückeberg, dated the 11th of this month,
 for a loan of 200 Reichsthaler from the chamber treasury
 is denied.
+B[ücke]b[ur]g. 15 Nov. 1841.
 
-                                    Bbg. 15 Nov. 1841.
+[initials of those who worded text above]
+F.p.
+Lm        L
 
-Fr.                                
-R.                                   F.p.
-Expedirt                             Lm        L
-Holste                
-17/11.                  
-             
+[initials of other Rentcammer officials]
+Fr.
+R. 
 
-                                     An
-                                     Fürstliche Rentkammer.
-                                     Des Colon Krückeberg
-                                     No 10 in Berenbusch
-                                     unterthänigstes Gesuch
-                                     um Bewilligung
-                                     eines Darlehns aus
-                                     Kammerkasse.
-....
+logged as dispatched by clerk Holste on 17 November 1841             
+
+To the Princely Rentkammer.
+The most humble petition of Colon Krückeberg, No. 10 in Berenbusch,
+for the granting of a loan from the chamber treasury.
+____
 |===
 
