--- a/modules/689/pages/new-doc-02.adoc
+++ b/modules/689/pages/new-doc-02.adoc
@@ -39,7 +39,7 @@ Reichsthaler. The Amt also noted that it had temporarily suspended the distraint
 |image::05-l.png[scale=50,link=self]
 |===
 
-image::05-r.png[scale=50,link=self]
+image::05-r.png[scale=25link=self]
 
 === Transliteration and Translation
 
