--- a/modules/689/pages/new-doc-02.adoc
+++ b/modules/689/pages/new-doc-02.adoc
@@ -39,6 +39,13 @@ Reichsthaler. The Amt also noted that it had temporarily suspended the distraint
 |image::05-l.png[scale=50,link=self]
 |===
 
+[cols="1a,1a",options="noheader",frame=none,grid=none]
+|===
+|image::05-r.png[scale=50,link=self]
+|
+|===
+
+
 image::05-r.png[scale=25link=self]
 
 === Transliteration and Translation
