--- a/modules/689/pages/new-doc-02.adoc
+++ b/modules/689/pages/new-doc-02.adoc
@@ -227,7 +227,11 @@ This cover slip records the Rentkammer’s resolution of 14 October 1841: the Am
 in line with its 7 October report. The initials mark the concurrence of Kammer officials, and the expedition note
 shows clerk Holste dispatched the decision on 17 November 1841.
 
-image::06-l.png[scale=25,link=self]
+[cols="1a,1a",options="noheader",frame=none,grid=none]
+|===
+|image::06-l.png[scale=25,link=self]
+|
+|===
 
 === Transliteration and Translation
 
@@ -297,7 +301,11 @@ Note: This rubric, written in a different hand and placed by itself in the lower
 page, is a docket label identifying the petition. It does not form part of the Amt’s report or the Rentkammer’s
 resolution.
 
-image::08-l.png[scale=25,link=self]
+[cols="1a,1a",options="noheader",frame=none,grid=none]
+|===
+|image::08-l.png[scale=25,link=self]
+|
+|===
 
 [role="section-narrow"]
 === Transliteration and Translation
